--- a/insta/static/css/baseposts.css
+++ b/insta/static/css/baseposts.css
@@ -1,3 +1,13 @@
 h1 {
     color: pink;
 }
+
+.navbar-inverse {
+    background-color: #d199ae;
+    border: none;
+    border-radius: 0%;
+}
+
+.navbar-brand {
+    color: white;
+}
