--- a/insta/templates/insta-posts/today-posts.html
+++ b/insta/templates/insta-posts/today-posts.html
@@ -1,1 +1,24 @@
-{%extends 'insta-posts/base.html'%} {% block content %} {{block.super}} {% endblock %}
+{%extends 'insta-posts/base.html'%} {% block content %} {{block.super}}
+
+<div class="container">
+
+    <!-- Looping through news   -->
+    {% for posts_item in posts %}
+
+    <div class="row">
+        <!-- displaying News articles -->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-center"> {{ posts_item.title }} </h2>
+        </div>
+
+    </div>
+
+    {% empty %}
+    <div class="row">
+        <h2 class="text-center">There No Posts to display</h2>
+    </div>
+    {% endfor %}
+
+</div>
+
+{% endblock %}
