--- a/insta/templates/insta-posts/today-posts.html
+++ b/insta/templates/insta-posts/today-posts.html
@@ -1,8 +1,11 @@
-{%extends 'insta-posts/base.html'%} {% block content %} {{block.super}}
+{%extends 'insta-posts/base.html'%} {% load bootstrap3 %} {% block content %} {{block.super}}
 
+<!-- Looping through news   -->
 <div class="container">
-
-    <!-- Looping through news   -->
+    <form action="{%url 'postsToday'%}" method="post">
+        {%csrf_token%} {% bootstrap_form letterForm layout='inline' %}
+        <input type="submit" value="Subscribe">
+    </form>
     {% for posts_item in posts %}
 
     <div class="row">
@@ -24,6 +27,7 @@
     </div>
 
 </div>
+
 {% endfor %}
 
 </div>
