--- a/insta/templates/instaclone/homepage.html
+++ b/insta/templates/instaclone/homepage.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    {% if title %}
-    <title> InstaClone - {{ title }}</title>
-    {% else %}
-    <title> InstaClone</title>
-    {% endif %}
-
-</head>
-
-<body>
-
-
-    <h1> InstaClone</h1>
-
-
-</body>
-
-</html>
+{% extends "instaclone/base.html" %} {% block content%}
+<h1> InstaClone.</h1>
+{% endblock content %}
