--- a/insta/templates/instaclone/homepage.html
+++ b/insta/templates/instaclone/homepage.html
@@ -1,3 +1,1 @@
-{% extends "instaclone/base.html" %} {% block content%}
-<h1> InstaClone.</h1>
-{% endblock content %}
+{% extends "instaclone/base.html" %} {% block content%} {% endblock content %}
