--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,20 +4,20 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">
-                Join Up!
+                Login
             </legend>
             {{ form|crispy }}
 
         </fieldset>
         <div>
             <button class="btn btn-outline-info" type="submit">
-                Sign Up
+                Login
             </button>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Have an Account! <a class="ml-2" href="{% url 'login' %}"> Sign In</a>
+            Sign Up Today? <a class="ml-2" href="{% url 'register' %}"> Sign In</a>
         </small>
 
     </div>
