--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -1,5 +1,5 @@
 {% extends "instaclone/base.html" %} {% block content%}
-<h3>You Are Logged OOut</h3>
+<h3>You Are Logged Out</h3>
 
 <div class="border-top pt-3">
     <small class="text-muted">
