--- a/insta/templates/instaclone/base.html
+++ b/insta/templates/instaclone/base.html
@@ -22,13 +22,13 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>InstaClone</h3>
+                    <p class='text-muted'>Follower - Follow
                         <ul class="list-group">
                             <li class="list-group-item list-group-item-light">Upload Image</li>
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Calendars</li>
-                            <li class="list-group-item list-group-item-light">etc</li>
+                            <li class="list-group-item list-group-item-light">Clone Stories</li>
+                            <li class="list-group-item list-group-item-light">Follow</li>
+                            <li class="list-group-item list-group-item-light">LogOut</li>
                         </ul>
                     </p>
                 </div>
