--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -9,6 +9,21 @@
         </div>
     </div>
     <!-- FORM HERE -->
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">
+                Profile Info
+            </legend>
+            {{ user_form|crispy }} {{ profile_form|crispy }}
+
+        </fieldset>
+        <div>
+            <button class="btn btn-outline-info" type="submit">
+                Update Profile
+            </button>
+        </div>
+    </form>
 </div>
 
 {% endblock content %}
